--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ dl/week3/.vscode/settings.json
 dl/week3/hpcd copy.ipynb
 dl/week3/.ipynb_checkpoints/hpcd-checkpoint.ipynb
 dl/week3/hpcd
+.DS_Store
