--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,13 @@ dl/week3/hpcd copy.ipynb
 dl/week3/.ipynb_checkpoints/hpcd-checkpoint.ipynb
 dl/week3/hpcd
 .DS_Store
+dl/week4/nlp-getting-started.zip
+dl/week4/nlp-getting-started
+dl/week3/hpcd.pdf
+dl/week4/nlp_start.pdf
+.gitignore
+dl/week4/.ipynb_checkpoints/nlp-checkpoint.ipynb
+dl/.vscode/settings.json
+dl/week5/gan-getting-started
+dl/week5/*.zip
+dl/week5/.ipynb_checkpoints/monet-painting-with-gan-checkpoint.ipynb
